Improved search bar functionality and fixed filter dropdown visibility

--- a/static/styles/tui-doc.css
+++ b/static/styles/tui-doc.css
@@ -529,6 +529,10 @@ span.arrow {
 }
 
 .dropdown-content:hover {
+    display: block;
+}
+
+.dropdown-content {
     background-color: #00beaa;
     border-radius: 3px;
     box-shadow: #181818;
@@ -537,6 +541,6 @@ span.arrow {
 
 .dropdown-content label {
     color: #181818;
-    font-family: 'Segoe UI', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 120%;
 }
